gif overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 .height {
-  height: 70vh;
+  height: 85vh;
 }
 
 .brand-logo {
